# TDCS

./: .gitignore  开发文档.txt
etl-service/: .gitignore  Makefile  README.md  USAGE.md  docker-compose.yml  gen_ui.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  start.bat  start.sh  stop.bat  stop.sh
etl-service/clean_templates/: README.md  deduplicate.py  fillna_and_trim.py  filter_test.py  normalize_dates.py
etl-service/config/: config.yaml  config.yaml.example
etl-service/scripts/: init_db.sql  verify_skill_a.py
etl-service/sql_templates/: cfd_data.sql
etl-service/src/: main.py  service.py
etl-service/src/core/: config.py  config_models.py  config_validator.py  exceptions.py  file_processor.py  pipeline.py  task_manager.py
etl-service/src/etl/: _cleaner_runner.py  _sandbox_runner.py  cleaner_registry.py  encryption.py  extractor.py  loader.py  monthly_lifecycle.py  table_router.py  transform_sandbox.py
etl-service/src/infrastructure/: cache.py  database.py  file_archiver.py  ha_elector.py  state_tracker.py  worker_pool.py
etl-service/src/monitoring/: alerting.py  metrics.py  quality_reporter.py
etl-service/src/utils/: file_hash.py  logging_config.py  trace.py
etl-service/src/watcher/: event_handler.py  polling_scanner.py
etl-service/src/web/: app.py  auth.py
etl-service/src/web/api/: audit.py  cleaners.py  config_api.py  dashboard.py  files.py  monthly.py  quality.py  system.py  tasks.py  users.py
etl-service/src/web/static/: index.html
etl-service/tests/: conftest.py
etl-service/tests/unit/test_sculptor/: test_cache.py  (+3 more)
(+13 files in other folders)
